fix layout and nav css for better alignment

--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -9,5 +9,5 @@
 }
 
 .contentContainer {
-  min-width: var(--content-width);
+  max-width: var(--content-width);
 }
