--- a/components/navbar/NavLink.module.css
+++ b/components/navbar/NavLink.module.css
@@ -1,3 +1,9 @@
+.linkContainer {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
 .navlink {
   font-size: 1.8rem;
   text-decoration: none;
